@@ -68,6 +68,10 @@ New Features
 * LUCENE-4400: Add support for new NYSIIS Apache commons phonetic
   codec (Thomas Neidhart via Mike McCandless)
 
+* LUCENE-6059: Add Daitch-Mokotoff Soundex phonetic Apache commons
+  phonetic codec, and upgrade to Apache commons codec 1.10 (Thomas
+  Neidhart via Mike McCandless)
+
 API Changes
 
 * LUCENE-5900: Deprecated more constructors taking Version in *InfixSuggester and
